<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCTC_Android_src</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- phone color -->
	<string name="select_color">选择颜色</string>
	<string name="old_number">老用户手机号</string>
	<string name="old_number_hit">请输入您已有的手机号码</string>
	<string name="select_setmeal_pls">选择套餐</string>
	<string name="click_select_setmeal">点击选择您需要的套餐</string>
	<string name="add_to_shoping_cart">加入购物车</string>
	<string name="exterior">外观</string>
	<string name="introduce">介绍</string>
	<string  name="parameter">参数</string>
	<string name="setmeal">套餐</string>
	
	<!-- setmeal -->
	<string name="month_base_rent">月基本费（元）</string>
	<string name="domestic_traffic">国内流量</string>
	<string name="select_title_free_inland_call">国内通话（分钟）</string>
	<string name="all">全部</string>
	<string name="less_than">%d以下</string>
	<string name="more_than">%d以上</string>
	
	<string name="setmeal_category">套餐分类</string>
	<string name="month_rent">月租</string>
	<string name="freeinlandcall">国内语音</string>
	<string name="wifi_time">WIFI时长</string>
	<string name="sms_count">短信条数</string>
	<string name="mms_count">彩信条数</string>
	<string name="exceed_call">超出语音</string>
	<string name="exceed_traffic">超出流量</string>
	<string name="free_answer_area">免费接听范围</string>
	<string name="free_service">赠送业务</string>
	<string name="setmeal_recommend">套餐推荐</string>
	
	
	
</resources>
