<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            layout="@layout/title_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >

                        <HorizontalScrollView
                            android:id="@+id/horizontalScrollView"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:fadingEdge="@null"
                            android:scrollbars="none" >

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="50dp"
                                android:background="#33b5e5" >

                                <RadioGroup
                                    android:id="@+id/radioGroup"
                                    android:layout_width="fill_parent"
                                    android:layout_height="51dp"
                                    android:layout_alignParentTop="true"
                                    android:orientation="horizontal" >

                                    <RadioButton
                                        android:id="@+id/btn1"
                                        style="@style/radioButton"
                                        android:background="#E5E5E5"
                                        android:text="@string/exterior" />

                                    <RadioButton
                                        android:id="@+id/btn2"
                                        style="@style/radioButton"
                                        android:background="#E5E5E5"
                                        android:text="@string/introduce" />

                                    <RadioButton
                                        android:id="@+id/btn3"
                                        style="@style/radioButton"
                                        android:background="#E5E5E5"
                                        android:text="@string/parameter" />

                                    <RadioButton
                                        android:id="@+id/btn4"
                                        style="@style/radioButton"
                                        android:background="#E5E5E5"
                                        android:text="@string/setmeal" />
                                </RadioGroup>

                                <ImageView
                                    android:id="@+id/img1"
                                    android:layout_width="10dp"
                                    android:layout_height="4dp"
                                    android:layout_alignParentBottom="true"
                                    android:background="#33b5e5" />
                            </RelativeLayout>
                        </HorizontalScrollView>

                        <android.support.v4.view.ViewPager
                            android:id="@+id/pager"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/recommend_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_launcher" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_mid"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:lines="3"
                        android:text="sdfsdfadfsadfasdfasdfsadffffffffffdfsdffsdfsfsdfsdfdfsfsdfshhgyertsadvcvrtreffffffffffffffffffffffffaaaaaaaaaaaaaaaaaaaa"
                        android:textColor="#ffffff00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/select_color" />

                    <GridView
                        android:id="@+id/colors_gv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="4"
                        android:numColumns="4"
                        android:orientation="vertical" >
                    </GridView>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/old_number" />

                    <EditText
                        android:id="@+id/old_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_number_hit"
                        android:inputType="phone"
                        android:singleLine="true" >

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/select_setmeal_pls" />

                    <Button
                        android:id="@+id/select_setmeal_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/click_select_setmeal" />
                </LinearLayout>

                <Button
                    android:id="@+id/add_to_shopping_cart_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:background="#F7800C"
                    android:text="@string/add_to_shoping_cart" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommend_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:background="#666666"
            android:orientation="vertical" >

            <include
                android:layout_marginBottom="@dimen/margin_normal"
                layout="@layout/product_phone_list_model" />

            <include layout="@layout/product_phone_list_model" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>